--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,2 +1,33 @@
-<h1>Login</h1>
+<div class="row">
+  <div class="col s2 m2 offset-s1 offset-m5">
+    <h3 class="login-title text-center">Archive</h3>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s10 m4 offset-s1 offset-m4">
+    <div class="card">
+      <div class="card-content blue-grey-text">
+        <span class="col s12 m12 card-title"><b>Login</b></span>
+        <form class="col s12 m12">
+          <div class="row">
+            <div class="input-field col s12 m12">
+              <input id="email" type="text" class="validate">
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12 m12">
+              <input id="password" type="password" class="validate">
+              <label for="password">Password</label>
+            </div>
+          </div>
+        </form>
+        <div class="card-content check">
+          <a href="javascript:void(0)" class="waves-effect waves-light btn green">Login</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {{outlet}}
