--- a/app/welcome/template.hbs
+++ b/app/welcome/template.hbs
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col s2 m2 offset-s1 offset-m5">
-    <h2 class="welcome-title">Archive</h2>
+    <h3 class="welcome-title text-center">Archive</h3>
   </div>
   <div class="col s4 m3 offset-s5 offset-m2">
     <div class="login-btn-block">
-      <a class="btn">Login</a>
+      {{#link-to 'login' class="btn"}}Login{{/link-to}}
     </div>
   </div>
 </div>
@@ -20,7 +20,7 @@
         </p>
       </div>
       <div class="card-content check">
-        <a class="waves-effect waves-light btn-large">Sign Up</a>
+        {{#link-to 'signup' class="waves-effect waves-light btn-large"}}Sign Up{{/link-to}}
       </div>
     </div>
   </div>
