fix : decrease signup form row height

--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -10,25 +10,25 @@
       <div class="card-content blue-grey-text">
         <span class="col s12 m12 card-title"><b>Sign Up</b></span>
         <form class="col s12 m12">
-          <div class="row">
+          <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               <input id="full_name" type="text" class="validate">
               <label for="full_name">Full Name</label>
             </div>
           </div>
-          <div class="row">
+          <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               <input id="email" type="text" class="validate">
               <label for="email">Email</label>
             </div>
           </div>
-          <div class="row">
+          <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               <input id="password" type="password" class="validate">
               <label for="password">Password</label>
             </div>
           </div>
-          <div class="row">
+          <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               <input id="confirm_password" type="password" class="validate">
               <label for="confirm_password">Confirm Password</label>
