--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -12,31 +12,31 @@
         <form class="col s12 m12">
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
-              <input id="full_name" type="text" class="validate">
+              {{input id="full_name" type="text" class="validate" value=model.fullName}}
               <label for="full_name">Full Name</label>
             </div>
           </div>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
-              <input id="email" type="text" class="validate">
+              {{input id="email" type="text" class="validate" value=model.email}}
               <label for="email">Email</label>
             </div>
           </div>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
-              <input id="password" type="password" class="validate">
+              {{input id="password" type="password" class="validate" value=model.password}}
               <label for="password">Password</label>
             </div>
           </div>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
-              <input id="confirm_password" type="password" class="validate">
+              {{input id="confirm_password" type="password" class="validate" value=model.confirmPassword}}
               <label for="confirm_password">Confirm Password</label>
             </div>
           </div>
         </form>
         <div class="card-content check">
-          <a href="javascript:void(0)" class="waves-effect waves-light btn green">Sign Up</a>
+          <a href="javascript:void(0)" class="waves-effect waves-light btn green" {{action "signup"}}>Sign Up</a>
         </div>
       </div>
     </div>
