--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -9,7 +9,7 @@
     <div class="card">
       <div class="card-content blue-grey-text">
         <span class="col s12 m12 card-title"><b>Sign Up</b></span>
-        <form class="col s12 m12">
+        <form class="col s12 m12" {{action "signup" on="submit"}}>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               {{input id="full_name" type="text" class="validate" value=model.fullName}}
@@ -34,10 +34,10 @@
               <label for="confirm_password">Confirm Password</label>
             </div>
           </div>
+          <div class="card-content check">
+            <button class="waves-effect waves-light btn green" type="submit">Sign Up</button>
+          </div>
         </form>
-        <div class="card-content check">
-          <a href="javascript:void(0)" class="waves-effect waves-light btn green" {{action "signup"}}>Sign Up</a>
-        </div>
       </div>
     </div>
   </div>
