--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -14,24 +14,37 @@
             <div class="input-field col s12 m12">
               {{input id="full_name" type="text" class="validate" value=model.fullName}}
               <label for="full_name">Full Name</label>
+              <div class="error-div">
+                <span class="validation_error {{hide}}">{{errors.model.fullName.[0]}}</span>
+              </div>
             </div>
           </div>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               {{input id="email" type="text" class="validate" value=model.email}}
               <label for="email">Email</label>
+              <div class="error-div">
+                <span class="validation_error {{hide}}">{{errors.model.email.[0]}}</span>
+              </div>
+              
             </div>
           </div>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
               {{input id="password" type="password" class="validate" value=model.password}}
               <label for="password">Password</label>
+              <div class="error-div">
+                <span class="validation_error  {{hide}}">{{errors.model.password.[0]}}</span>
+              </div>
             </div>
           </div>
           <div class="row signup-row-field">
             <div class="input-field col s12 m12">
-              {{input id="confirm_password" type="password" class="validate" value=model.confirmPassword}}
+              {{input id="confirm_password" type="password" class="validate" value=model.passwordConfirmation}}
               <label for="confirm_password">Confirm Password</label>
+              <div class="error-div">
+                <span class="validation_error {{hide}}">{{errors.model.passwordConfirmation.[0]}}</span>
+              </div>
             </div>
           </div>
           <div class="card-content check">
